Refactoring: extracted classes. #719
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2261 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/tools/CedmaImporter/CedmaImporter.csproj
+++ b/tools/CedmaImporter/CedmaImporter.csproj
@@ -112,6 +112,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Token.cs" />
+    <Compile Include="SymbolicExpressionImporter.cs" />
     <Compile Include="ImporterForm.cs">
       <SubType>Form</SubType>
     </Compile>
