--- a/sources/HeuristicLab.SparseMatrix/3.2/HeuristicLab.SparseMatrix-3.2.csproj
+++ b/sources/HeuristicLab.SparseMatrix/3.2/HeuristicLab.SparseMatrix-3.2.csproj
@@ -81,12 +81,18 @@
   <ItemGroup>
     <Compile Include="HeuristicLabSparseMatrixPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SparseMatrix.cs" />
+    <Compile Include="SparseMatrixRow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.Core\3.2\HeuristicLab.Core-3.2.csproj">
+      <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
+      <Name>HeuristicLab.Core-3.2</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
