removed sparse in naming of !SparseMatrix and !SparseMatrixRow because of a name clash with the surrounding namespace (ticket #701)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2284 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SparseMatrix/3.2/HeuristicLab.SparseMatrix-3.2.csproj
+++ b/sources/HeuristicLab.SparseMatrix/3.2/HeuristicLab.SparseMatrix-3.2.csproj
@@ -81,8 +81,8 @@
   <ItemGroup>
     <Compile Include="HeuristicLabSparseMatrixPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SparseMatrix.cs" />
-    <Compile Include="SparseMatrixRow.cs" />
+    <Compile Include="Matrix.cs" />
+    <Compile Include="MatrixRow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
