Worked on #722 (IModel should provide a Predict() method to get predicted values for an input vector). At the same time removed parameter PunishmentFactor from GP algorithms (this parameter is internal to TreeEvaluators now).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2285 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -84,6 +84,7 @@
     <Compile Include="BaseClasses\AlgorithmBase.cs" />
     <Compile Include="BaseClasses\FunctionTreeBase.cs" />
     <Compile Include="BaseClasses\TreeEvaluatorBase.cs" />
+    <Compile Include="Predictor.cs" />
     <Compile Include="Evaluators\SimpleGPEvaluatorBase.cs" />
     <Compile Include="HL3TreeEvaluator.cs" />
     <Compile Include="Symbols\Addition.cs" />
