--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -81,12 +81,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalyzerModel.cs" />
     <Compile Include="ClassificationProblemInjector.cs" />
     <Compile Include="DoubleExtensions.cs" />
+    <Compile Include="IAnalyzerModel.cs" />
     <Compile Include="VariableImpactCalculatorBase.cs" />
     <Compile Include="VariableEvaluationImpactCalculator.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="IModel.cs" />
+    <Compile Include="IPredictor.cs" />
     <Compile Include="SimpleEvaluatorBase.cs" />
     <Compile Include="ITimeSeriesAlgorithm.cs" />
     <Compile Include="IClassificationAlgorithm.cs" />
