--- a/sources/HeuristicLab.CEDMA.Charting/3.3/HeuristicLab.CEDMA.Charting-3.3.csproj
+++ b/sources/HeuristicLab.CEDMA.Charting/3.3/HeuristicLab.CEDMA.Charting-3.3.csproj
@@ -95,13 +95,19 @@
       <DependentUpon>BubbleChartView.cs</DependentUpon>
     </Compile>
     <Compile Include="HeuristicLabCedmaChartingPlugin.cs" />
+    <Compile Include="IResultsViewFactory.cs" />
+    <Compile Include="ModelingBubbleChart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableResultsView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TableResultsView.Designer.cs">
+      <DependentUpon>TableResultsView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VisualMatrix.cs" />
+    <Compile Include="VisualMatrixRow.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\HeuristicLab.CEDMA.Core\3.3\HeuristicLab.CEDMA.Core-3.3.csproj">
-      <Project>{C27DDF6C-84DF-45EF-B82F-57A28DD51166}</Project>
-      <Name>HeuristicLab.CEDMA.Core-3.3</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Charting.Data\3.2\HeuristicLab.Charting.Data-3.2.csproj">
       <Project>{E0740131-AA3E-4A3F-BA03-C9FF8327F4EE}</Project>
       <Name>HeuristicLab.Charting.Data-3.2</Name>
@@ -118,6 +124,10 @@
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.SparseMatrix\3.2\HeuristicLab.SparseMatrix-3.2.csproj">
+      <Project>{1263BB36-1F20-4960-A5CB-530746DBAD77}</Project>
+      <Name>HeuristicLab.SparseMatrix-3.2</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
@@ -129,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BubbleChartView.resx">
       <DependentUpon>BubbleChartView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TableResultsView.resx">
+      <DependentUpon>TableResultsView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
