added utility class matrix creator which combines 2 arrays of length N into a matrix [N,2] (ticket #728)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2313 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ClassificationProblemInjector.cs" />
     <Compile Include="DoubleExtensions.cs" />
     <Compile Include="IAnalyzerModel.cs" />
+    <Compile Include="MatrixCreator.cs" />
     <Compile Include="VariableImpactCalculatorBase.cs" />
     <Compile Include="VariableEvaluationImpactCalculator.cs" />
     <Compile Include="IPredictor.cs" />
