Applied patch from mkommend for variable impact calculators and adapted data-modeling algorithms to use the new operators for variable impact calculation. #728
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2319 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SupportVectorMachines/3.2/HeuristicLab.SupportVectorMachines-3.2.csproj
+++ b/sources/HeuristicLab.SupportVectorMachines/3.2/HeuristicLab.SupportVectorMachines-3.2.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Predictor.cs" />
+    <Compile Include="PredictorBuilder.cs" />
     <Compile Include="SupportVectorRegression.cs" />
     <Compile Include="SVMModel.cs" />
     <Compile Include="HeuristicLabSupportVectorMachinesPlugin.cs" />
@@ -96,8 +97,6 @@
     <Compile Include="SVMModelView.Designer.cs">
       <DependentUpon>SVMModelView.cs</DependentUpon>
     </Compile>
-    <Compile Include="VariableEvaluationImpactCalculator.cs" />
-    <Compile Include="VariableQualityImpactCalculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
