moved !DoubleExtension to !HeuristicLab.Common (ticket #733)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2324 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -63,6 +63,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoubleExtensions.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="EnumerableEventArgs.cs" />
     <Compile Include="HeuristicLabCommonPlugin.cs" />
     <Compile Include="ObservableCollection.cs" />
