this is the remaining part of changeset r2327. Applied changes in modeling plugins that are necessary for the new model analyzer (#722)  * predictor has properties for the lower and upper limit of the predicted value  * added views for predictors that show the limits (also added a new view for `GeneticProgrammingModel` that shows the size and height of the model)  * Reintroduced `TreeEvaluatorInjectors` that read a `PunishmentFactor` and calculate the lower and upper limits for estimated values (limits are set in the tree evaluators)  * Added operators to create Predictors. Changed modeling algorithms to use the predictors for the calculation of final model qualities and variable impacts (to be compatible with the new model analyzer the predictors use a very large `PunishmentFactor`)  * replaced all private implementations of `double.IsAlmost` and use `HL.Commons` instead (see #733 r2324)  * Implemented operator `SolutionExtractor` and moved `BestSolutionStorer` from `HL.Logging` to `HL.Modeling` (fixes #734)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2328 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -84,10 +84,18 @@
     <Compile Include="BaseClasses\AlgorithmBase.cs" />
     <Compile Include="BaseClasses\FunctionTreeBase.cs" />
     <Compile Include="BaseClasses\TreeEvaluatorBase.cs" />
+    <Compile Include="HL3TreeEvaluatorInjector.cs" />
+    <Compile Include="HL2TreeEvaluatorInjector.cs" />
     <Compile Include="PredictorBuilder.cs" />
     <Compile Include="Predictor.cs" />
     <Compile Include="Evaluators\SimpleGPEvaluatorBase.cs" />
     <Compile Include="HL3TreeEvaluator.cs" />
+    <Compile Include="PredictorView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PredictorView.Designer.cs">
+      <DependentUpon>PredictorView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Symbols\Addition.cs" />
     <Compile Include="Symbols\And.cs" />
     <Compile Include="Symbols\Average.cs" />
@@ -220,6 +228,9 @@
   <ItemGroup>
     <EmbeddedResource Include="OffSpringSelectionGpEditor.resx">
       <DependentUpon>OffSpringSelectionGpEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PredictorView.resx">
+      <DependentUpon>PredictorView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StandardGpEditor.resx">
       <DependentUpon>StandardGpEditor.cs</DependentUpon>
