--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -82,7 +82,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzerModel.cs" />
+    <Compile Include="BestSolutionStorer.cs" />
     <Compile Include="ClassificationProblemInjector.cs" />
+    <Compile Include="SolutionExtractor.cs" />
+    <Compile Include="PredictorBase.cs" />
     <Compile Include="IAnalyzerModel.cs" />
     <Compile Include="MatrixCreator.cs" />
     <Compile Include="VariableEvaluationImpactCalculator.cs" />
