Added NotificationDictionary to HeuristicLab.Common (#737)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2345 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="EnumerableEventArgs.cs" />
     <Compile Include="HeuristicLabCommonPlugin.cs" />
+    <Compile Include="NotificationDictionary.cs" />
     <Compile Include="ObservableCollection.cs" />
   </ItemGroup>
   <ItemGroup>
