adapted mainform base to declare gui specific members with the new keyword (ticket #716)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2348 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
+++ b/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
@@ -130,11 +130,11 @@
     <Compile Include="DockForm.Designer.cs">
       <DependentUpon>DockForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MultipleDocumentForm.cs">
+    <Compile Include="DocumentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MultipleDocumentForm.Designer.cs">
-      <DependentUpon>MultipleDocumentForm.cs</DependentUpon>
+    <Compile Include="DocumentForm.Designer.cs">
+      <DependentUpon>DocumentForm.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -168,8 +168,8 @@
     <EmbeddedResource Include="MultipleDocumentMainForm.resx">
       <DependentUpon>MultipleDocumentMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MultipleDocumentForm.resx">
-      <DependentUpon>MultipleDocumentForm.cs</DependentUpon>
+    <EmbeddedResource Include="DocumentForm.resx">
+      <DependentUpon>DocumentForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
