Created a subclass for time-series prognosis with SVM and created a simple version of `TheilInequalityCoefficientEvaluator` in `HL.Modeling`. (#705)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2349 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -84,6 +84,7 @@
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
     <Compile Include="ClassificationProblemInjector.cs" />
+    <Compile Include="SimpleTheilInequalityCoefficientEvaluator.cs" />
     <Compile Include="SolutionExtractor.cs" />
     <Compile Include="PredictorBase.cs" />
     <Compile Include="IAnalyzerModel.cs" />
