Worked on SVM classification engine. #625
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2351 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -83,12 +83,14 @@
   <ItemGroup>
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
-    <Compile Include="ClassificationProblemInjector.cs" />
+    <Compile Include="SimpleAccuracyEvaluator.cs" />
+    <Compile Include="SimpleConfusionMatrixEvaluator.cs" />
     <Compile Include="SimpleTheilInequalityCoefficientEvaluator.cs" />
     <Compile Include="SolutionExtractor.cs" />
     <Compile Include="PredictorBase.cs" />
     <Compile Include="IAnalyzerModel.cs" />
     <Compile Include="MatrixCreator.cs" />
+    <Compile Include="TargetClassesCalculator.cs" />
     <Compile Include="VariableEvaluationImpactCalculator.cs" />
     <Compile Include="IPredictor.cs" />
     <Compile Include="SimpleEvaluatorBase.cs" />
