stored model metadata into modeling.database changed analyzermodel to use dictionary of string, object (ticket #731)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2355 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling.Database.SQLServerCompact/3.2/HeuristicLab.Modeling.Database.SQLServerCompact-3.2.csproj
+++ b/sources/HeuristicLab.Modeling.Database.SQLServerCompact/3.2/HeuristicLab.Modeling.Database.SQLServerCompact-3.2.csproj
@@ -120,8 +120,10 @@
     <Compile Include="DataObjects\Algorithm.cs" />
     <Compile Include="DataObjects\InputVariable.cs" />
     <Compile Include="DataObjects\InputVariableResult.cs" />
+    <Compile Include="DataObjects\MetaData.cs" />
     <Compile Include="DataObjects\Model.cs" />
     <Compile Include="DataObjects\ModelData.cs" />
+    <Compile Include="DataObjects\ModelMetaData.cs" />
     <Compile Include="HeuristicLabModelingDatabaseSQLServerCompactPlugin.cs" />
     <Compile Include="ModelingDataContext.cs" />
     <Compile Include="DataObjects\ModelResult.cs" />
