--- a/sources/HeuristicLab.Modeling.Database/3.2/HeuristicLab.Modeling.Database-3.2.csproj
+++ b/sources/HeuristicLab.Modeling.Database/3.2/HeuristicLab.Modeling.Database-3.2.csproj
@@ -81,6 +81,8 @@
   <ItemGroup>
     <Compile Include="IInputVariableResult.cs" />
     <Compile Include="IAlgorithm.cs" />
+    <Compile Include="IMetaData.cs" />
+    <Compile Include="IModelMetaData.cs" />
     <Compile Include="IProblem.cs" />
     <Compile Include="IVariable.cs" />
     <Compile Include="IInputVariable.cs" />
