Implemented #706 (Linear regression algorithm for time series).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2360 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.LinearRegression/3.2/HeuristicLab.LinearRegression-3.2.csproj
+++ b/sources/HeuristicLab.LinearRegression/3.2/HeuristicLab.LinearRegression-3.2.csproj
@@ -94,6 +94,7 @@
     <Compile Include="HeuristicLabLinearRegressionPlugin.cs" />
     <Compile Include="LinearRegression.cs" />
     <Compile Include="LinearRegressionOperator.cs" />
+    <Compile Include="LinearTimeSeriesPrognosis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
