Fixed #742 (Consistent naming scheme for data-modeling engines).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2361 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification.TimeSeries/3.3/HeuristicLab.GP.StructureIdentification.TimeSeries-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification.TimeSeries/3.3/HeuristicLab.GP.StructureIdentification.TimeSeries-3.3.csproj
@@ -83,10 +83,10 @@
   <ItemGroup>
     <Compile Include="AveragePercentageChangeEvaluator.cs" />
     <Compile Include="HeuristicLabGPTimeSeriesPlugin.cs" />
-    <Compile Include="OffspringSelectionGP.cs" />
+    <Compile Include="OffspringSelectionGPTimeSeriesPrognosis.cs" />
     <Compile Include="ProfitEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StandardGP.cs" />
+    <Compile Include="StandardGPTimeSeriesPrognosis.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Core\3.2\HeuristicLab.Core-3.2.csproj">
