added !FunctionTreeIterator to !HeuristicLab.GP.Interfaces (ticket #749)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2364 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.Interfaces/3.3/HeuristicLab.GP.Interfaces-3.3.csproj
+++ b/sources/HeuristicLab.GP.Interfaces/3.3/HeuristicLab.GP.Interfaces-3.3.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FunctionTreeIterator.cs" />
     <Compile Include="IFunctionTreeSerializer.cs">
       <SubType>Code</SubType>
     </Compile>
