Added enumerable type for model results and changed analyzer model, the database backend and the model analysis operators to use the enumerable type instead of hard-coded strings.  #755 (Hard-coded strings for variable names of data-modeling results)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2370 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
+    <Compile Include="ModelingResult.cs" />
+    <Compile Include="ModelType.cs" />
     <Compile Include="DefaultClassificationOperators.cs" />
     <Compile Include="DefaultRegressionOperators.cs" />
     <Compile Include="DefaultTimeSeriesOperators.cs" />
