added code for persisting of !ModelType into the database (ticket #756)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2371 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -83,6 +83,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="EnumerableEventArgs.cs" />
+    <Compile Include="EventArgs.cs" />
     <Compile Include="HeuristicLabCommonPlugin.cs" />
     <Compile Include="NotificationDictionary.cs" />
     <Compile Include="ObservableCollection.cs" />
