Refactored CEDMA dispatcher and CEDMA server view to allow different modeling scenarios for each variable. #754
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2375 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Server/3.3/HeuristicLab.CEDMA.Server-3.3.csproj
+++ b/sources/HeuristicLab.CEDMA.Server/3.3/HeuristicLab.CEDMA.Server-3.3.csproj
@@ -90,8 +90,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProblemSpecification.cs" />
     <Compile Include="LearningTask.cs" />
-    <Compile Include="Problem.cs" />
     <Compile Include="ProblemView.cs">
       <SubType>UserControl</SubType>
     </Compile>
