Implemented additional model quality metrics. #761
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2379 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -83,6 +83,9 @@
   <ItemGroup>
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
+    <Compile Include="SimpleWeightedDirectionalSymmetryEvaluator.cs" />
+    <Compile Include="SimpleDirectionalSymmetryEvaluator.cs" />
+    <Compile Include="SimpleNMSEEvaluator.cs" />
     <Compile Include="ModelingResult.cs" />
     <Compile Include="ModelType.cs" />
     <Compile Include="DefaultClassificationOperators.cs" />
