renamed file `MatrixCreator.cs` -> `Matrix.cs` to reflect class name change in r2379. #761
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2380 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="SimpleWeightedDirectionalSymmetryEvaluator.cs" />
     <Compile Include="SimpleDirectionalSymmetryEvaluator.cs" />
     <Compile Include="SimpleNMSEEvaluator.cs" />
@@ -97,7 +98,6 @@
     <Compile Include="SolutionExtractor.cs" />
     <Compile Include="PredictorBase.cs" />
     <Compile Include="IAnalyzerModel.cs" />
-    <Compile Include="MatrixCreator.cs" />
     <Compile Include="TargetClassesCalculator.cs" />
     <Compile Include="VariableEvaluationImpactCalculator.cs" />
     <Compile Include="IPredictor.cs" />
