added mapping between !ModelingResults and !SimpleEvaluators (ticket #755)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2383 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -84,6 +84,7 @@
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
     <Compile Include="Matrix.cs" />
+    <Compile Include="ModelingResultCalculators.cs" />
     <Compile Include="SimpleWeightedDirectionalSymmetryEvaluator.cs" />
     <Compile Include="SimpleDirectionalSymmetryEvaluator.cs" />
     <Compile Include="SimpleNMSEEvaluator.cs" />
