--- a/sources/LibSVM/LibSVM.csproj
+++ b/sources/LibSVM/LibSVM.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kernel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="GaussianTransform.cs" />
@@ -94,7 +95,8 @@
     <Compile Include="RangeTransform.cs" />
     <Compile Include="Scaling.cs" />
     <Compile Include="Solver.cs" />
-    <Compile Include="SupportClass.cs" />
+    <Compile Include="SVMExtensions.cs" />
+    <Compile Include="TemporaryCulture.cs" />
     <Compile Include="Training.cs" />
   </ItemGroup>
   <ItemGroup>
