Implemented #782 (Additional model quality metrics: Pearson product-moment correlation coefficient and Spearman's rank correlation coefficient)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2428 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -81,8 +81,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="alglib\ap.cs" />
+    <Compile Include="alglib\correlation.cs" />
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
+    <Compile Include="SimpleStableCorrelationCoefficientEvaluator.cs" />
+    <Compile Include="SimplePearsonCorrelationCoefficientEvaluator.cs" />
+    <Compile Include="SimpleSpearmansRankCorrelationCoefficientEvaluator.cs" />
     <Compile Include="DefaultModelAnalyzerOperators.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="ModelingResultCalculators.cs" />
